<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

        <EditText
                android:selectAllOnFocus="true"
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="10dp"/>

        <EditText
                android:selectAllOnFocus="true"
                android:id="@+id/contentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                app:layout_constraintTop_toBottomOf="@id/titleTextView"
                android:layout_margin="10dp"/>

        <EditText
                android:selectAllOnFocus="true"
                android:id="@+id/imageUrlTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_url"
                app:layout_constraintTop_toBottomOf="@id/contentTextView"
                android:layout_margin="10dp"/>

        <EditText
                android:id="@+id/urlTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url"
                app:layout_constraintTop_toBottomOf="@id/imageUrlTextView"
                android:layout_margin="@dimen/general_margin"/>

        <EditText
                android:selectAllOnFocus="true"
                android:id="@+id/actionTextTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_text"
                app:layout_constraintTop_toBottomOf="@id/urlTextView"
                android:layout_margin="10dp"/>

        <Button
                android:selectAllOnFocus="true"
                android:id="@+id/btnNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_notification"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actionTextTextView"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>